--- a/AutoPartsShop/Views/_ViewImports.cshtml
+++ b/AutoPartsShop/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using AutoPartsShop.Models
 @using AutoPartsShop.ViewModels
 
+@addTagHelper AutoPartsShop.TagHelpers.*, AutoPartsShop
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
