--- a/AutoPartsShop/Views/Part/Details.cshtml
+++ b/AutoPartsShop/Views/Part/Details.cshtml
@@ -9,4 +9,14 @@
         <h3><a href="#">@Model.Name</a></h3>
         <p>@Model.Description</p>
     </div>
+    <div class="addToCart">
+        <p class="button">
+            <a class="btn btn-primary"
+               asp-controller="Cart"
+               asp-action="AddToCart"
+               asp-route-partId="@Model.PartId">
+                Add to Cart
+            </a>
+        </p>
+    </div>
 </div>
