--- a/AutoPartsShop/wwwroot/content/site.css
+++ b/AutoPartsShop/wwwroot/content/site.css
@@ -29,7 +29,8 @@
     }
 
 .thumbnail img {
-    width: 100%;
+    max-height: 370px;
+    max-width: 100%;
 }
 
 .addToCart {
@@ -89,4 +90,13 @@ footer {
 .btn {
     background-color: #fcaeae !important;
     border-color: #fba1a1 !important;
+}
+
+.img-thumbnail img {
+    margin: auto;
+    height: 150px;
+}
+
+.caption h3 {
+    font-size: 16px;
 }
