--- a/AutoPartsShop/Views/Shared/_Layout.cshtml
+++ b/AutoPartsShop/Views/Shared/_Layout.cshtml
@@ -29,12 +29,11 @@
                         <li><a asp-controller="Contact" asp-action="Index">Contact</a></li>
                         @await Component.InvokeAsync("CartSummary")
                         <li>
-                            <form action="@Url.Action("Search", "Part")" method="get">
+                            <form action="@Url.Action("Search", "Part")" method="get" class="form-group">
                                 <input type="text" name="criteria" />
-                                <button type="submit" class="button"></button>
+                                <button type="submit" class="button">Search</button>
                             </form>
                         </li>
-                        @*<partial name="_LoginPartial" />*@
                     </ul>
                 </div>
             </div>
